# project_1_Search

./: CMakeLists.txt  README.md
greedyFeatureSearch/: CS170_Spring_2022_Large_data__97.txt  CS170_Spring_2022_Small_data__97.txt  project2.py  testbench.py
header/: AStarSearch.h  AStarSearch_misplaced.h  Node.h  Problem.h  UniformSearch.h  debug.h  printUI.h
searchAStarBuild/: .gitignore
searchAStarBuild/header/: AStarSearch_euclidean.h  Node.h  Problem.h  UniformSearch.h  printUI.h
searchAStarBuild/src/: AStarSearch_misplaced.cpp  Problem.cpp  UniformSearch.cpp  main.cpp  printUI.cpp
src/: AStarSearch.cpp  AStarSearch_euclidean.cpp  Node.cpp  Problem.cpp  UniformSearch.cpp  main.cpp  printUI.cpp  uniformSearch.cpp
tests/: test.cpp  testEx.h
